force-app/main/default/objects/Apttus_Config2__ConfigSelectBundleOptionsSettings__c/Apttus_Config2__ConfigSelectBundleOptionsSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for option selection pages. The record should be named as &quot;Primary Settings&quot;.</description>
    <label>Config Select Options Settings</label>
</CustomObject>