force-app/main/default/objects/Apttus_Config2__ConfigSelectBundleOptionsSettings__c/fields/Apttus_Config2__BundleDescriptionField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BundleDescriptionField__c</fullName>
    <description>Field name from Product object is displayed as bundle description.</description>
    <inlineHelpText>API name of a field from product object to be displayed as bundle description.</inlineHelpText>
    <label>Bundle Description Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>