force-app/main/default/objects/Apttus_Config2__ConfigSelectBundleOptionsSettings__c/fields/Apttus_Config2__HideValidateButton__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HideValidateButton__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide validate button in select bundle options page</description>
    <label>Hide Validate Button(D)</label>
    <type>Checkbox</type>
</CustomField>