force-app/main/default/objects/Apttus_Config2__ConfigSelectBundleOptionsSettings__c/fields/Apttus_Config2__ListedOptionsColumn2__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ListedOptionsColumn2__c</fullName>
    <description>API name of the product field to be displayed in the listed options section.</description>
    <inlineHelpText>API name of the product field to be displayed in the listed options section. A valid value could be like ProductCode.</inlineHelpText>
    <label>Listed Options Column 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>