force-app/main/default/objects/Apttus_Config2__ConfigSelectBundleOptionsSettings__c/fields/Apttus_Config2__MaxInlineOptionAttributes__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MaxInlineOptionAttributes__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Setting for the max number of inline option attributes displayed. The default is 3.</description>
    <inlineHelpText>Setting for the max number of inline option attributes displayed. The default is 3.</inlineHelpText>
    <label>Max Inline Option Attributes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>