force-app/main/default/objects/Apttus_Config2__ConfigSelectBundleOptionsSettings__c/fields/Apttus_Config2__OptionFieldInSummary__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OptionFieldInSummary__c</fullName>
    <description>Option field to be displayed on right hand side of configuration page</description>
    <inlineHelpText>Field to be displayed from Option Line Item. Only text fields are supported.</inlineHelpText>
    <label>Option Field In Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>