force-app/main/default/objects/Apttus_Config2__ConfigSelectBundleOptionsSettings__c/fields/Apttus_Config2__ShowBundleDetail__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowBundleDetail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked bundle price and quantity fields are displayed in options pages</description>
    <inlineHelpText>Check to show bundle price and quantity in options pages</inlineHelpText>
    <label>Show Bundle Detail</label>
    <type>Checkbox</type>
</CustomField>