force-app/main/default/objects/Apttus_Config2__ConfigSelectBundleOptionsSettings__c/fields/Apttus_Config2__ShowOptionQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowOptionQuantity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the option quantity</description>
    <inlineHelpText>Show the option quantity</inlineHelpText>
    <label>Show Option Quantity</label>
    <type>Checkbox</type>
</CustomField>